# adsb-tracker

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
deploy/pi/: .env.example  Dockerfile  docker-compose.yml  setup-pi.sh
scripts/: setup_sdr.ps1  start_all.ps1  start_dump1090.ps1
src/adsb_tracker/: __init__.py  __main__.py  app.py  config.py  decoder.py  feeder.py  models.py  routes.py  store.py
src/adsb_tracker/static/: index.html  raw.html
src/adsb_tracker/static/css/: style.css
src/adsb_tracker/static/js/: feed.js  map.js  ws.js
tests/: conftest.py  test_decoder.py  test_models.py  test_store.py
