[project]
name = "adsb-tracker"
version = "0.1.0"
description = "ADS-B aircraft tracker using Nooelec SDR, dump1090, and a FastAPI/Leaflet web interface"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
    "pyModeS>=2.18",
    "loguru>=0.7",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "jinja2>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adsb_tracker = ["static/**/*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
